# cymongoose

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/: RELEASE.md
.github/workflows/: build-alt.yml  build-simple.yml  build-wheels.yml  ci.yml  codeql.yml  demo.yml  docs.yml  test-wheels.yml
advanced/nogil/: index.html
advanced/performance/: index.html
advanced/shutdown/: index.html
advanced/threading/: index.html
advanced/troubleshooting/: index.html
api/: index.html
api/async_manager/: index.html
api/connection/: index.html
api/manager/: index.html
api/messages/: index.html
api/utilities/: index.html
dev/: index.html
dev/asgi/: index.html
dev/cleanup_and_shutdown/: index.html
dev/connection_drain/: index.html
dev/contributing/: index.html
dev/poll_timeout_guide/: index.html
dev/security/: index.html
dev/wsgi/: index.html
docs/: changelog.rst  conf.py  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst
docs/advanced/: nogil.md  nogil.rst  performance.md  performance.rst  shutdown.md  shutdown.rst  threading.md  threading.rst  troubleshooting.md  troubleshooting.rst
docs/api/: async_manager.md  connection.md  connection.rst  index.md  index.rst  manager.md  manager.rst  messages.md  messages.rst  utilities.md  utilities.rst
docs/dev/: api-analysis.md  asgi.md  cleanup_and_shutdown.md  code_nogil_review.md  connection_drain.md  contributing.md  contributing.rst  ctrl_c_workaround.md  feature-coverage.md  index.md  index.rst  mg_http_delete_chunk.md  nogil_optimization_summary.md  poll_timeout_guide.md  security.md  wsgi.md
docs/guide/: asgi.md  http.md  http.rst  index.md  index.rst  mqtt.md  mqtt.rst  network.md  network.rst  tls.md  tls.rst  websocket.md  websocket.rst  wsgi.md
examples/: index.html
guide/: index.html
guide/asgi/: index.html
guide/http/: index.html
guide/mqtt/: index.html
guide/network/: index.html
guide/tls/: index.html
guide/websocket/: index.html
guide/wsgi/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
src/cymongoose/: __init__.py  _mongoose.c  _mongoose.pyi  _mongoose.pyx  aio.py  asgi.py  mongoose.pxd  wsgi.py
src/pymongoose/: __init__.py  _mongoose.c
tests/: README.md  __init__.py  conftest.py  test_adversarial.py  test_asgi.py  test_asyncio_integration.py  test_base64.py  test_basic_auth.py  test_buffer_access.py  test_concurrent_clients.py  test_connection.py  test_connection_state.py  test_constants.py  test_dns.py  test_drain.py  test_flow_control.py  test_hashing.py  test_high_impact_refactors.py  test_http_chunked.py  test_http_parsing.py  test_http_server.py  test_http_sse.py  test_http_var.py  test_json.py  test_lowlevel.py  test_manager_run.py  test_match.py  test_medium_impact_refactors.py  test_misc_utils.py  test_mqtt_advanced.py  test_mqtt_pubsub.py  test_multipart.py  test_review_fixes.py  test_rpc.py  test_serve_static.py  test_sntp.py  test_stress.py  test_timer.py  test_tls.py  test_url_encode.py  (+4 more)
tests/benchmarks/: bench_cleanup.py  bench_direct.py  bench_sigint.py  bench_signal_handler.py  bench_web_framework.py  demo_server.py  manual_benchmark.md  quick_bench.py  quickstart.md  readme.md  results.md  run_benchmark.py  simple_benchmark.py  simple_load_test.py  summary.md  test_sigint.py
tests/benchmarks/servers/: flask_server.py  pymongoose_server.py  uvicorn_server.py
tests/examples/: README.md  test_examples_advanced.py  test_examples_http.py  test_examples_http_client.py  test_examples_http_server.py  test_examples_http_server_static_files.py  test_examples_mqtt_client_server.py  test_examples_protocols.py  test_examples_web_framework.py  test_examples_websocket_broadcast.py  test_examples_websocket_server.py
tests/examples/advanced/: http_proxy_client.py  multithreaded_server.py  tls_https_server.py
tests/examples/http/: graceful-shutdown-drain.py  graceful-shutdown.py  http_client.py  http_file_upload.py  http_restful_server.py  http_server.py  http_sse_server.py  http_streaming_client.py  http_web_framework.py
tests/examples/mqtt/: mqtt_client.py  mqtt_server.py
tests/examples/network/: dns_client.py  sntp_client.py  tcp_echo_server.py  udp_echo_server.py
tests/examples/web_root/: index.html
tests/examples/websocket/: websocket_broadcast.py  websocket_server.py
