[project]
name = "cymongoose"
version = "0.1.10"
description = "High-performance Python bindings for the Mongoose embedded networking library"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
{ name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" },
]
keywords = [
    "mongoose",
    "networking",
    "http",
    "https",
    "websocket",
    "mqtt",
    "server",
    "client",
    "embedded",
    "async",
    "high-performance",
    "tls",
    "ssl",
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",

    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",

    # Natural Language
    "Natural Language :: English",

    # Operating Systems
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    # Programming Languages
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",

    # Topics
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",

    # Typing
    "Typing :: Typed",
]

dependencies = []

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "fastapi>=0.118.1",
    "flask>=3.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "uvicorn>=0.37.0",
    "websocket-client>=1.9.0",
    "twine>=6.2.0",
    "ruff>=0.14.8",
    "mypy>=1.19.0",
]

[build-system]
requires = ["scikit-build-core>=0.8", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/cymongoose"]
cmake.args = []
cmake.define = {}
sdist.include = [
    "thirdparty/mongoose/mongoose.c",
    "thirdparty/mongoose/mongoose.h",
    "src/cymongoose/*.pyx",
    "src/cymongoose/*.pxd",
]
sdist.exclude = []
wheel.exclude = [
    "*.pxd",
    "*.pyx",
    "*.c",
    "*.h",
]

[project.urls]
Homepage = "https://github.com/shakfu/cymongoose"
Repository = "https://github.com/shakfu/cymongoose"
Documentation = "https://github.com/shakfu/cymongoose"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cymongoose"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
